feature-documentation.backend: Improve overall documentation.